<resources>
    <string name="app_name">邻汇吧</string>
    <string name="action_settings">Settings</string>
    <string name="txt_waiting">请稍候…</string>
    <string name="confirm">确定</string>
    <string name="cancel">取消</string>
    <string name="back">返回</string>
    <string name="close">关闭</string>
    <string name="loading_text">正在加载……</string>
    <string name="dialog_prompt">提示</string>
    <string name="delete_prompt">确定删除?</string>
    <string name="back_business">返回商家</string>
    <string name="order_listitem_price_unit_text">¥</string>
    <string name="edit_verification_str">0123456789abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="txt_phonenumber_hint">请输入手机号码</string>
    <string name="txt_correctphonenumber_hint">请输入有效手机号码</string>
    <string name="txt_code_hint">请输入验证码</string>
    <string name="txt_password_hint">请输入密码</string>
    <string name="txt_password_lenthhint">请输入6-30位密码</string>
    <string name="txt_confirm_pw_hint">请确认密码</string>
    <string name="txt_confirm_yqm_hint">请输入邀请码(可选)</string>
    <string name="txt_confirm_possword_remind">两次密码输入不一致</string>
    <string name="txt_register_btn_txt">注册</string>
    <string name="txt_register_codebtn_txt">获取验证码</string>
    <string name="txt_register_remind_codebtn_txt">请输入正确验证码</string>
    <string name="txt_register_send_codeb_remind">已提交请求</string>
    <string name="txt_register_send_codeb_error_remind">发送失败，请稍后再试</string>
    <string name="txt_register_success_remind">注册成功！</string>
    <string name="txt_register_error_remind">注册失败，请稍后再试</string>
    <string name="tab_txt_Home">首页</string>
    <string name="tab_txt_shopping">购物车</string>
    <string name="tab_txt_my">我的</string>
    <string name="tab_txt_custome">客服</string>
    <string name="tab_txt_invite">邀请有奖</string>
    <string name="login_btn_text">登录</string>
    <string name="login_fastlogin_text">快速登录</string>
    <string name="login_btn_right_text">忘记密码？</string>
    <string name="login_no_account_text">请输入账号</string>
    <string name="login_login_error_text">登录失败，请稍后再试</string>
    <string name="login_integral_hinttext">重新登录，查看积分</string>
    <string name="login_qq_authorization_error">授权失败</string>
    <string name="leftimg_text">场地</string>
    <string name="righttimg_text">广告</string>
    <string name="left_text">热门场地</string>
    <string name="right_text">热门广告</string>
    <string name="search_hint_txt">请输入小区/楼宇关键词</string>
    <string name="area_name_txt">杭州</string>
    <string name="fieldarea_name_txt">杭州市</string>
    <string name="search_Sequence_type_txt">排序</string>
    <string name="search_types_type_txt">类型</string>
    <string name="search_area_type_txt">区域</string>
    <string name="search_price_type_txt">价格</string>
    <string name="honefragment_function">敬请期待</string>
    <string name="screening_txt">筛选</string>
    <string name="home_activity_item_timetxt">时间：</string>
    <string name="home_projecttxt">专题推荐</string>
    <string name="btn_securitycode">获取验证码</string>
    <string name="btn_securitycode_reget">已发送</string>
    <string name="register_tab_corporate_account_str">企业账号</string>
    <string name="register_tab_personal_account_str">个人账号</string>
    <string name="myself_titletxt">我的</string>
    <string name="myselfinfo_titletxt">个人信息</string>
    <string name="myselfinfo_modify_pw">修改密码</string>
    <string name="myselfinfo_save_pw">保存</string>
    <string name="myselfinfo_order">我的订单</string>
    <string name="myselfinfo_review_allorder">查看全部订单</string>
    <string name="myselfinfo_pay">待支付</string>
    <string name="myselfinfo_check">待审核</string>
    <string name="myselfinfo_waiting">进行中</string>
    <string name="myselfinfo_review">待评价</string>
    <string name="myselfinfo_refused">已拒绝</string>
    <string name="myselfinfo_reviewed">已评价</string>
    <string name="myselfinfo_offline_pay">对账中</string>
    <string name="myselfinfo_offline_pay_noupload">未上传凭证</string>
    <string name="myselfinfo_offline_pay_upload">请等待确认</string>
    <string name="myselfinfo_helpcenter_txt">帮助中心</string>
    <string name="myselfinfo_service">联系客服</string>
    <string name="myselfinfo_about">关于我们</string>
    <string name="myselfinfo_version">版本更新</string>
    <string name="groupbooding_myself_str">我的拼团</string>
    <string name="myselfinfo_wallet_str">我的钱包</string>
    <string name="myselfinfo_invite">邀请有奖</string>
    <string name="myselfinfo_acountinfo">账号信息</string>
    <string name="myselfinfo_phone">手机号码</string>
    <string name="myselfinfo_invitecode">邀请码</string>
    <string name="myselfinfo_companyname">公司名</string>
    <string name="myselfinfo_companyinfo">公司信息</string>
    <string name="myselfinfo_business_info">商家详情</string>
    <string name="myselfinfo_productname">产品名</string>
    <string name="myselfinfo_contactname">联系人</string>
    <string name="myselfinfo_company_acountinfo">账户信息</string>
    <string name="myselfinfo_mailbox">邮箱</string>
    <string name="myselfinfo_modify_password">修改密码</string>
    <string name="myselfinfo_exit">退出账号</string>
    <string name="myselfinfo_uesrname_text">未登录</string>
    <string name="myselfinfo_account_text">登录以后享受更多特权</string>
    <string name="myselfinfo_username_text">用户名</string>
    <string name="myselfinfo_phonenum_txt">手机号</string>
    <string name="myselfinfo_weixinname">微信号</string>
    <string name="myselfinfo_companyname_certification">公司认证</string>
    <string name="myselfinfo_mycontactname">联系人管理</string>
    <string name="myselfinfo_applyforrelease_txt">申请发布权限</string>
    <string name="myselfinfo_applyforrelease_successtxt">已提交申请，请等待审核</string>
    <string name="myselfinfo_applyforrelease_repeat_submit_prompt">您的申请正在审核中，如需更改，请重新提交。</string>
    <string name="myselfinfo_perfect_prompt">请完善个人资料</string>
    <string name="myselfinfo_industry_choose">行业选择</string>
    <string name="myselfinfo_upload_picture">上传地推照片</string>
    <string name="myselfinfo_upload_picture_error_str">图片显示出错</string>
    <string name="myselfinfo_industry_choose_titletext">行业选择</string>
    <string name="myselfinfo_perfect_text">待完善</string>
    <string name="myselfinfo_term_management_text">我的企业</string>
    <string name="myself_enterprise_certification_str">激活企业认证，享受更多权益</string>
    <string name="myselfinfo_activity_management_text">活动管理</string>
    <string name="myselfinfo_signing_title_text">该功能只有签约账户可用\n是否与邻汇吧签约？</string>
    <string name="myselfinfo_signing_text">签约</string>
    <string name="myselfinfo_signing_appointment_success_titletext">签约预约成功</string>
    <string name="myselfinfo_signing_appointment_success_contenttext">近期邻汇吧工作人员会与您联系。与邻汇吧签约后，可使用数据统计功能。</string>
    <string name="myself_customization_tv_str">我的需求</string>
    <string name="applyforrelease_companyneme_txt">公司名称</string>
    <string name="applyforrelease_productname_txt">产品名称</string>
    <string name="pay_success_dialog_text">完善公司信息有助于物业审核通过。</string>
    <string name="pay_success_dialog_left_prompt">稍后</string>
    <string name="pay_success_dialog_right_prompt">去完善资料</string>
    <string name="mandatory_textview">*</string>
    <string name="applyforrelease_payment_account_txt">收款账号</string>
    <string name="applyforrelease_bankname_txt">开户行</string>
    <string name="applyforrelease_name_txt">开户人</string>
    <string name="applyforrelease_contect_txt">联系人</string>
    <string name="applyforrelease_email_txt">邮箱</string>
    <string name="applyforrelease_companyneme_hinttxt">请输入公司名称</string>
    <string name="applyforrelease_productname_hinttxt">请输入产品名称</string>
    <string name="applyforrelease_payment_account_hinttxt">请输入收款账号</string>
    <string name="applyforrelease_bankname_hinttxt">请输入开户行</string>
    <string name="applyforrelease_name_hinttxt">请输入开户人</string>
    <string name="applyforrelease_contect_hinttxt">请输入联系人</string>
    <string name="applyforrelease_email_hinttxt">请输入邮箱</string>
    <string name="applyforrelease_email_errortxt">请输入正确的邮箱</string>
    <string name="invoiceinfo_firstname_txt">输入公司抬头</string>
    <string name="invoiceinfo_companycode_txt">输入公司税号</string>
    <string name="invoiceinfo_firstname_hinttxt">请输入公司抬头</string>
    <string name="invoiceinfo_invoice_hinttxt">请选择开票内容</string>
    <string name="invoiceinfo_entry_type_txt">开具类型</string>
    <string name="invoiceinfo_type_txt">发票类型</string>
    <string name="managecontact_title_txt">管理联系人</string>
    <string name="managecontacteditor_title_txt">编辑联系人</string>
    <string name="two_dimension_code_string">扫描上方二维码，绑定微信号</string>
    <string name="findresource_titletxtstring">委托找资源</string>
    <string name="Upload_business_license">点击上传营业执照</string>
    <string name="myselfinfo_focuson_txt">我的关注</string>
    <string name="myselfinfo_addfocuson_txt">关注成功</string>
    <string name="myselfinfo_deletefocuson_txt">已取消关注</string>
    <string name="myselfinfo_footprint_txt">推广历史</string>
    <string name="myselfinfo_schedule_txt">推广行程</string>
    <string name="myselfinfo_paper_txt">我的票据</string>
    <string name="myselfinfo_resourcemanagement_txt">资源管理</string>
    <string name="myselfinfo_exclusive_txt">专属页面</string>
    <string name="footprint_remark_txt">备注</string>
    <string name="footprint_remark_sales_txt">销售额</string>
    <string name="footprint_remark_sales_hinttxt">请输入销售额</string>
    <string name="footprint_remark_focus_txt">新增关注</string>
    <string name="footprint_remark_focus_hinttxt">请输入新增关注量</string>
    <string name="favorires_titletxt">我的关注</string>
    <string name="myselfinfo_propertyorders_txt">订单审核</string>
    <string name="myselfinfo_defaultaccount_txt">默认联系人</string>
    <string name="myself_account_addtxt">新增+</string>
    <string name="myselfinfo_order_checktxt">订单审核</string>
    <string name="myselfinfo_field_order">我的审核</string>
    <string name="myselfinfo_field_review_allorder">查看全部审核</string>
    <string name="invoiceinfo_address_errormsg">请选择并补充地址</string>
    <string name="invoiceinfo_account_errormsg">请选择联系人</string>
    <string name="invoiceinfo_mobile_errormsg">请选择联系方式</string>
    <string name="childaccount_name_text">姓名：\t</string>
    <string name="childaccount_mobile_text">手机号：\t</string>
    <string name="service_text">客服</string>
    <string name="service_time_text">客服时间  </string>
    <string name="service_phone_text">客服电话  </string>
    <string name="service_prompt_text">您有任何疑问  我们都会耐心为您解答。</string>
    <string name="pw_oldtext">请输入当前密码</string>
    <string name="pw_new_text">请输入新密码</string>
    <string name="pw_repeat_new_text">请确认新密码</string>
    <string name="pw_check_oldpw_text">当前密码不正确</string>
    <string name="pw_repeat_error_text">两次新密码输入不一致请重新输入</string>
    <string name="pw_modify_success_text">修改成功</string>
    <string name="pw_modify_error_text">修改失败，请稍后再试</string>
    <string name="pw_modify_ueserinfo_text">请输入修改内容</string>
    <string name="pw_modify_text">修改</string>
    <string name="pw_find">找回密码</string>
    <string name="fieldinfo_phonetxt">电话</string>
    <string name="order_refuse_ordertxt">拒絕原因:</string>
    <string name="confirmorder_success_button_text">邀请好友，赚取邻汇基金</string>
    <string name="confirmorder_back_homepage">返回首页</string>
    <string name="txt_mobile">请输入手机号码</string>
    <string name="txt_name">请输入名字</string>
    <string name="txt_email">请输入邮箱（可选）</string>
    <string name="field_list_other_nodata">暂无数据记录</string>
    <string name="txt_childaccount_dutyfieldtxt">责任场地</string>
    <string name="txt_childaccounteditor_nametxt">姓名</string>
    <string name="txt_childaccounteditor_mobiletxt">手机号</string>
    <string name="mTxt_save_fieldinfo">保存</string>
    <string name="field_shelves_reason">下架原因:</string>
    <string name="field_shelves_reasonhint">请输入下架原因</string>
    <string name="field_add_time">下次上架时间:</string>
    <string name="field_add_time_addtext">(选填)</string>
    <string name="field_add_time_hint">请选择下次上架时间</string>
    <string name="module_my_coupons_no_data">很抱歉 ≥-≤\n您暂时没有优惠券哦！</string>
    <string name="module_my_coupons_no_data_goto_centre">去领券中心看看</string>
</resources>