<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        android:orientation="vertical">
        <include
            layout="@layout/linhui_business_title_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_linelayout_height"
            android:background="@color/top_title_line_color" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/app_backbtn_marginleft">
            <TextView
                android:layout_width="@dimen/edittext_height"
                android:layout_height="wrap_content"
                style="@style/app_linearlayoutrighttxt_style"
                android:text="@string/txt_childaccounteditor_nametxt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/txt_name"
                style="@style/app_linearlayoutrightedit_style"
                android:id="@+id/childaccount_nameedit"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_linelayout_height"
            android:background="@color/new_viewbg"
            android:layout_marginLeft="@dimen/app_backbtn_marginleft"
            android:layout_marginRight="@dimen/app_backbtn_marginleft"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/app_backbtn_marginleft">
            <TextView
                android:layout_width="@dimen/edittext_height"
                android:layout_height="wrap_content"
                style="@style/app_linearlayoutrighttxt_style"
                android:text="@string/txt_childaccounteditor_mobiletxt"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                style="@style/app_linearlayoutrightedit_style"
                android:hint="@string/txt_mobile"
                android:maxLength="11"
                android:inputType="number"
                android:id="@+id/childaccount_mobileedit"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/title_bar_linelayout_height"
            android:background="@color/new_viewbg"
            android:layout_marginLeft="@dimen/app_backbtn_marginleft"
            android:layout_marginRight="@dimen/app_backbtn_marginleft"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:orientation="horizontal"
            android:background="@color/white"
            android:gravity="center_vertical"
            android:paddingRight="@dimen/app_backbtn_marginleft">
            <TextView
                android:layout_width="@dimen/edittext_height"
                android:layout_height="wrap_content"
                style="@style/app_linearlayoutrighttxt_style"
                android:text="@string/myselfinfo_mailbox"/>
            <EditText
                android:layout_width="match_parent"
                android:layout_height="@dimen/title_height"
                style="@style/app_linearlayoutrightedit_style"
                android:hint="@string/txt_email"
                android:id="@+id/childaccount_emailedit"/>
        </LinearLayout>
        <View
            android:layout_width="fill_parent"
            android:layout_height="@dimen/regiter_linelayout_height"
            android:background="@color/app_linearlayout_bg" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/regiter_btnlayout_height"
            android:paddingLeft="@dimen/regiter_linelayout_height"
            style="@style/app_linearlayoutrighttxt_style"
            android:text="@string/txt_childaccount_dutyfieldtxt"/>
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/title_bar_back_marginLeft">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">
                <com.linhuiba.linhuifield.fieldview.FieldMyListView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/fieldchildaccount_dutyfield_listview"
                    android:background="@color/app_linearlayout_bg"
                    android:divider="@color/app_linearlayout_bg"
                    android:paddingBottom="@dimen/userinfo_layout_margin">
                </com.linhuiba.linhuifield.fieldview.FieldMyListView>
            </LinearLayout>

        </ScrollView>
    </LinearLayout>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/mTxt_save_fieldinfo"
        android:gravity="bottom|center_horizontal"
        android:textSize="@dimen/fieldinfo_diogle_time_textsize"
        android:textColor="@color/white"
        android:paddingBottom="@dimen/txt_margin"
        android:visibility="gone"
        android:id="@+id/invitation_dialog"/>
</RelativeLayout>