<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/field_view_bg">
    <include
        layout="@layout/linhui_business_title_bar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />
    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/top_title_line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/service_relative_layout_height"
        android:layout_marginTop="@dimen/title_bar_back_marginLeft"
        android:paddingLeft="@dimen/title_bar_back_marginLeft"
        android:paddingRight="@dimen/title_bar_back_marginLeft"
        android:orientation="vertical"
        android:background="@color/field_view_bg">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/order_type_layoutwidth"
            android:gravity="center_vertical"
            android:textColor="@color/title_bar_txtcolor"
            android:textSize="@dimen/user_info_photo_txt_size"
            android:text="@string/field_shelves_reason"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="@dimen/myself_order_layout_width"
            android:id="@+id/field_shelves_reason_edit"
            android:background="@drawable/loadmorelistview_bg"
            android:paddingLeft="@dimen/title_bar_back_marginLeft"
            android:paddingTop="@dimen/title_bar_back_marginLeft"
            android:hint="@string/field_shelves_reasonhint"
            android:textColor="@color/register_edit_color"
            android:textSize="@dimen/txt_title_size_info"
            android:maxLength="200"
            android:gravity="top"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/advertising_tffs_height"
        android:layout_marginTop="@dimen/title_bar_back_marginLeft"
        android:paddingLeft="@dimen/title_bar_back_marginLeft"
        android:paddingRight="@dimen/title_bar_back_marginLeft"
        android:orientation="vertical"
        android:background="@color/field_view_bg">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/order_type_layoutwidth"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/title_bar_txtcolor"
                android:textSize="@dimen/user_info_photo_txt_size"
                android:text="@string/field_add_time"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:textColor="@color/register_edit_color"
                android:textSize="@dimen/txt_title_size_info"
                android:text="@string/field_add_time_addtext"/>

        </LinearLayout>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/user_info_account_width"
            android:background="@drawable/loadmorelistview_bg"
            android:paddingLeft="@dimen/title_bar_back_marginLeft"
            android:id="@+id/choose_date_textview"
            android:hint="@string/field_add_time_hint"
            android:textColor="@color/register_edit_color"
            android:textSize="@dimen/txt_title_size_info"
            android:gravity="center_vertical"
            android:drawableRight="@drawable/ic_select"
            android:paddingRight="@dimen/title_bar_back_marginLeft"/>
    </LinearLayout>

</LinearLayout>