<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">
    <RelativeLayout
        android:id="@+id/about_title"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_bar_back_layout_width_height"
        android:background="@color/top_title" >

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            >
            <TextView
                android:id="@+id/_signning_txt_back_top"
                android:layout_width="@dimen/fieldinfo_toleft_addshopcard"
                android:layout_height="fill_parent"
                android:drawableLeft="@drawable/ic_returnbutton_normal_three"
                android:drawablePadding="5dp"
                android:textColor="@drawable/titlebar_righttxt_pressedbg"
                android:visibility="visible"
                android:gravity="center"
                android:text=""
                android:textSize="@dimen/title_bar_txtsize"
                android:paddingLeft="@dimen/app_backbtn_marginleft"
                />

        </LinearLayout>

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/myselfinfo_signing_appointment_success_titletext"
            android:visibility="visible"
            android:textSize="@dimen/title_bar_txtsize"
            android:textColor="@color/title_bar_txtcolor"
            />
    </RelativeLayout>

    <View
        android:layout_width="fill_parent"
        android:layout_height="@dimen/title_bar_linelayout_height"
        android:background="@color/top_title_line_color"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_pay_for_success"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/default_bluebg"
            android:textSize="@dimen/confirmorder_success_textsize"
            android:layout_marginTop="@dimen/advertising_tffs_width"
            android:id="@+id/success_pw_title_text"
            android:text="@string/myselfinfo_signing_appointment_success_titletext"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/orderconfirm_success_bottom_btntextcolor"
            android:textSize="@dimen/txt_title_size_nor"
            android:layout_marginTop="@dimen/advertising_box_width"
            android:id="@+id/success_pw_title_message_text"
            android:layout_marginLeft="@dimen/TableRow_img_width_height"
            android:layout_marginRight="@dimen/TableRow_img_width_height"
            android:text="@string/myselfinfo_signing_appointment_success_contenttext"
            android:lineSpacingExtra="@dimen/maintab_width_margintop"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="@dimen/order_type_layoutwidth"
            android:layout_marginLeft="@dimen/fieldinfo_toleft_addshopcard"
            android:layout_marginRight="@dimen/fieldinfo_toleft_addshopcard"
            android:layout_marginTop="@dimen/title_bar_layout_width_height"
            android:background="@drawable/loginbtn_bg"
            android:textColor="@color/white"
            android:textSize="@dimen/btn_title_size"
            android:text="@string/confirmorder_success_button_text"
            android:visibility="invisible"/>
        <Button
            android:layout_width="@dimen/addshoppingcard_width"
            android:layout_height="@dimen/btn_margin_width"
            android:layout_marginTop="@dimen/TableLayout_width"
            android:background="@drawable/activity_orderconfirm_success_backhome_btn_bg"
            android:textColor="@color/top_title_center_txt_color"
            android:textSize="@dimen/text_title_size_next"
            android:text="@string/confirmorder_back_homepage"
            android:visibility="gone"/>

    </LinearLayout>
</LinearLayout>