<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/app_linearlayout_bg">
    <RelativeLayout
        android:id="@+id/app_no_data_ll"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="center_horizontal"
        android:visibility="gone">
        <include
            android:id="@+id/app_no_data_view"
            layout="@layout/app_no_data_layout"
            android:visibility="gone">
        </include>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/field_list_other_nodata"
            android:textSize="20sp"
            android:visibility="gone"
            android:id="@+id/list_no_data_tv"
            android:layout_centerVertical="true"
            android:layout_centerHorizontal="true"
            android:gravity="fill_horizontal|center_vertical" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:gravity="center"
            android:orientation="vertical"
            android:visibility="gone"
            android:id="@+id/my_coupons_no_data_ll">
            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/ic_invoice_title_no"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/home_area_drop_marginleft"
                android:textColor="@color/register_edit_color"
                android:textSize="@dimen/title_bar_title_txt_size"
                android:gravity="center"
                android:id="@+id/my_msg_no_data_tv"
                android:text="@string/module_my_coupons_no_data"/>
            <TextView
                android:layout_width="@dimen/share_layout_height"
                android:layout_height="@dimen/advertising_box_width"
                style="@style/DefaultLongViewStyle"
                android:layout_marginTop="@dimen/myself_order_img_width"
                android:background="@drawable/module_register_success_tv_bg"
                android:textColor="@drawable/activity_splash_screen_tv_textcolor_bg"
                android:textSize="@dimen/login_leftright_txt_size"
                android:gravity="center"
                android:visibility="gone"
                android:id="@+id/my_msg_no_data_goto_tv"
                android:text="@string/module_my_coupons_no_data_goto_centre"/>

        </LinearLayout>

    </RelativeLayout>

    <android.support.v4.widget.SwipeRefreshLayout
        android:id="@+id/app_swipe_refresh"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">
        <android.support.v7.widget.RecyclerView
            android:id="@+id/app_recycler_view"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        </android.support.v7.widget.RecyclerView>
    </android.support.v4.widget.SwipeRefreshLayout>
</LinearLayout>